--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="#" class="button" id="stop">Stop</a>
     </nav>
     <div class="stopwatch"></div>
+    <div class="reset"><a href="#" class="button" id="reset1">Reset</a></div>
     <ul class="results"></ul>
     <script type="text/javascript" src="script-compiled.js"></script>
   </body>
